@@ -5,6 +5,7 @@ Trevius: Fixed a bug that would cause clients in an existing trade to get bugged
 Trevius: Added new Perl Mob quest object MakeTempPet(spell_id, [name=NULL, duration=0, target=NULL]).
 Trevius: Added new Perl NPC quest object GetSwarmOwner() to get the ID of a swarm pet's owner.
 Trevius: Hide will now break if you move when not sneaking, even if you have invisibility on.
+Derision: Fixed bug in Guild Bank.
 
 ==04/29/2010==
 gaeorn: fixed tables to avoid login server hang if ServerTagDescription in tblWorldServerRegistration is null
